added single categorys

--- a/index.html
+++ b/index.html
@@ -107,6 +107,37 @@
 
     <!-- header ends here  -->
 
+    <!-- main starts here  -->
+    <main>
+        <!-- single category starts here  -->
+        <section>
+            <div class="container text-center py-5">
+                <div class="row g-5">
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-3 border rounded-3 bg-warning d-flex align-items-center justify-content-around">
+                        <h1>Watch</h1>
+                        <img class="w-25" src="images/categories/watch.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-3 border rounded-3 bg-info d-flex align-items-center justify-content-around">
+                        <h1>Bag</h1>
+                        <img class="w-25" src="images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-3 border rounded-3 bg-primary d-flex align-items-center justify-content-around">
+                        <h1>Shoes</h1>
+                        <img class="w-25" src="images/categories/shoes.png" alt="">
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+        </section>
+        <!-- single category ends here  -->
+    </main>
+    <!-- main ends here  -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
