--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5">
-                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            <img src="images/banner-images/headphone.png" class="d-block img-fluid" alt="...">
                         </div>
                     </div>
                   </div>
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5">
-                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            <img src="images/banner-images/tv.png" class="d-block img-fluid" alt="...">
                         </div>
                     </div>
                   </div>
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5">
-                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            <img src="images/banner-images/xbox.png" class="d-block img-fluid" alt="...">
                         </div>
                     </div>
                   </div>
@@ -136,6 +136,53 @@
               </div>
         </section>
         <!-- single category ends here  -->
+
+        <!-- shoes section starts  -->
+        <section class="container my-5">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <h2 class="text-danger m-2">$180</h2>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <h2 class="text-danger m-2">$210</h2>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <h2 class="text-danger m-2">$160</h2>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
+        <!-- shoes section ends  -->
     </main>
     <!-- main ends here  -->
 
