--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
         <!-- shoes section starts  -->
         <section class="container my-5">
+            <h1 class="mb-4">Shoes</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                   <div class="card border border-0 shadow-lg h-100">
@@ -183,6 +184,54 @@
 
         </section>
         <!-- shoes section ends  -->
+
+        <!-- bag section starts  -->
+        <section class="container my-5">
+            <h1 class="mb-4">Backpacks</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Angry Birds bag</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <h2 class="text-danger m-2">$180</h2>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Birds Bag</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <h2 class="text-danger m-2">$210</h2>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Kala Manik bag</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <h2 class="text-danger m-2">$160</h2>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
+        <!-- bag section ends  -->
     </main>
     <!-- main ends here  -->
 
