--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <!-- bag section ends  -->
 
         <!-- subscribe section starts -->
-        <section id="subscribe" style="height: 300px;"  class="container rounded-4 d-flex justify-content-center align-items-center bg-info bg-gradient">
+        <section id="subscribe" style="height: 300px;"  class="container rounded-3 d-flex justify-content-center align-items-center bg-info my-5">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
