--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,7 +17,7 @@
 
         <!-- navbar starts here  -->
 
-        <nav class="navbar navbar-expand-lg fixed-top bg-light">
+        <nav class="navbar navbar-expand-lg  bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,72 +49,78 @@
         <!-- navbar ends here  -->
 
         <!-- slider starts here  -->
-        <section class="mt-5">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active bg-info border rounded p-5">
-                        <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center">
-                                <div>
-                                    <h1>cool Dude Headphone</h1>
-                                    <p>This is the best headphone in the world for people who just want to waste time in
-                                        front of funky world.</p>
-                                    <h1 class="price">$420</h1>
-                                    <button class="btn btn-warning">Buy Now</button>
-                                </div>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="images/banner-images/headphone.png" class="d-block img-fluid" alt="...">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item bg-info border rounded p-5">
-                        <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center">
-                                <div>
-                                    <h1>Mega LCD TV For Sports</h1>
-                                    <p>This is the best tv in the world for people who just want to waste time in front
-                                        of tv.</p>
-                                    <h1 class="price">$1200</h1>
-                                    <button class="btn btn-warning">Buy Now</button>
-                                </div>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="images/banner-images/tv.png" class="d-block img-fluid" alt="...">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item bg-info border rounded p-5">
-                        <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center">
-                                <div>
-                                    <h1>X-Box for your living room</h1>
-                                    <p>This is the best x-box in the world for people who just want to waste time in
-                                        front of fake sports.</p>
-                                    <h1 class="price">$600</h1>
-                                    <button class="btn btn-warning">Buy Now</button>
-                                </div>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="images/banner-images/xbox.png" class="d-block img-fluid" alt="...">
-                            </div>
-                        </div>
-                    </div>
+        <section class=" mt-5">
+                                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active panda-bg-info rounded p-5">
+                                            <div class="row">
+                                                <div class="col-lg-7 d-flex align-items-center">
+                                                    <div>
+                                                        <h1>cool Dude Headphone</h1>
+                                                        <p>This is the best headphone in the world for people who just
+                                                            want to waste time in
+                                                            front of funky world.</p>
+                                                        <h1 class="price">$420</h1>
+                                                        <button class="btn btn-buy-now">Buy Now</button>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-5">
+                                                    <img src="images/banner-images/headphone.png"
+                                                        class="d-block img-fluid" alt="...">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item panda-bg-info border rounded p-5">
+                                            <div class="row">
+                                                <div class="col-lg-7 d-flex align-items-center">
+                                                    <div>
+                                                        <h1>Mega LCD TV For Sports</h1>
+                                                        <p>This is the best tv in the world for people who just want to
+                                                            waste time in front
+                                                            of tv.</p>
+                                                        <h1 class="price">$1200</h1>
+                                                        <button class="btn btn-buy-now">Buy Now</button>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-5">
+                                                    <img src="images/banner-images/tv.png" class="d-block img-fluid"
+                                                        alt="...">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item panda-bg-info border rounded p-5">
+                                            <div class="row">
+                                                <div class="col-lg-7 d-flex align-items-center">
+                                                    <div>
+                                                        <h1>X-Box for your living room</h1>
+                                                        <p>This is the best x-box in the world for people who just want
+                                                            to waste time in
+                                                            front of fake sports.</p>
+                                                        <h1 class="price">$600</h1>
+                                                        <button class="btn btn-buy-now">Buy Now</button>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-5">
+                                                    <img src="images/banner-images/xbox.png" class="d-block img-fluid"
+                                                        alt="...">
+                                                </div>
+                                            </div>
+                                        </div>
 
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-        <!-- slider ends here  -->
+                                    </div>
+                                    <button class="carousel-control-prev" type="button"
+                                        data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button"
+                                        data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                                </section>
+                                <!-- slider ends here  -->
     </header>
 
     <!-- header ends here  -->
@@ -122,23 +130,23 @@
         <!-- single category starts here  -->
         <section>
             <div class="container text-center py-5">
-                <div class="row g-5">
+                <div class="row g-5 categoris">
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-3 bg-warning d-flex align-items-center justify-content-around">
+                        <div style="background-color: #ffa500;" class="p-3 border rounded-3 d-flex align-items-center justify-content-around">
                             <h1>Watch</h1>
-                            <img class="w-25" src="images/categories/watch.png" alt="">
+                            <img  src="images/categories/watch.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-3 bg-info d-flex align-items-center justify-content-around">
+                        <div style="background-color: #da70d6;" class="p-3 border rounded-3 d-flex align-items-center justify-content-around">
                             <h1>Bag</h1>
-                            <img class="w-25" src="images/categories/bag.png" alt="">
+                            <img  src="images/categories/bag.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-3 bg-primary d-flex align-items-center justify-content-around">
+                        <div style="background-color: #da70d6;" class="p-3 border rounded-3 bg-primary d-flex align-items-center justify-content-around">
                             <h1>Shoes</h1>
-                            <img class="w-25" src="images/categories/shoes.png" alt="">
+                            <img  src="images/categories/shoes.png" alt="">
                         </div>
                     </div>
 
@@ -161,7 +169,7 @@
                         </div>
                         <h2 class="text-danger m-2">$180</h2>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -175,7 +183,7 @@
                         </div>
                         <h2 class="text-danger m-2">$210</h2>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -189,7 +197,7 @@
                         </div>
                         <h2 class="text-danger m-2">$160</h2>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -212,7 +220,7 @@
                         </div>
                         <h2 class="text-danger m-2">$180</h2>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -226,7 +234,7 @@
                         </div>
                         <h2 class="text-danger m-2">$210</h2>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -240,7 +248,7 @@
                         </div>
                         <h2 class="text-danger m-2">$160</h2>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -250,7 +258,8 @@
         <!-- bag section ends  -->
 
         <!-- subscribe section starts -->
-        <section id="subscribe" style="height: 300px;"  class="container rounded-3 d-flex justify-content-center align-items-center bg-info my-5">
+        <section id="subscribe" style="height: 300px;"
+            class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info my-5">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -259,7 +268,7 @@
                     <div class="mb-2">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-buy-now">Submit</button>
                 </form>
             </div>
         </section>
