--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                                             <div class="row">
                                                 <div class="col-lg-7 d-flex align-items-center">
                                                     <div>
-                                                        <h1>cool Dude Headphone</h1>
+                                                        <h1>Cool Dude Headphone</h1>
                                                         <p>This is the best headphone in the world for people who just
                                                             want to waste time in
                                                             front of funky world.</p>
-                                                        <h1 class="price">$420</h1>
+                                                        <h1 class="price text-danger">$420</h1>
                                                         <button class="btn btn-buy-now">Buy Now</button>
                                                     </div>
                                                 </div>
@@ -78,7 +78,7 @@
                                                         <p>This is the best tv in the world for people who just want to
                                                             waste time in front
                                                             of tv.</p>
-                                                        <h1 class="price">$1200</h1>
+                                                        <h1 class="price text-danger">$1200</h1>
                                                         <button class="btn btn-buy-now">Buy Now</button>
                                                     </div>
                                                 </div>
@@ -96,7 +96,7 @@
                                                         <p>This is the best x-box in the world for people who just want
                                                             to waste time in
                                                             front of fake sports.</p>
-                                                        <h1 class="price">$600</h1>
+                                                        <h1 class="price text-danger">$600</h1>
                                                         <button class="btn btn-buy-now">Buy Now</button>
                                                     </div>
                                                 </div>
@@ -277,7 +277,7 @@
     <!-- main ends here  -->
 
     <!-- footer satarts -->
-    <footer class="text-center mt-5">
+    <footer class="text-center text-muted mt-5">
         <p>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
     </footer>
     <!-- footer ends -->
