--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#watch">Watch</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link" href="#subscribe"">Subscribe</a>
@@ -256,6 +259,57 @@
 
         </section>
         <!-- bag section ends  -->
+
+        <!-- watch section starts  -->
+        <section id="watch" class="container my-5">
+            <h1 class="mb-4">Watch</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/watch/watch-2.png" class="card-img-top watch-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Diamond Watch</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <h2 class="text-danger m-2">$150</h2>
+                        <div class="m-3">
+                            <button class="btn btn-buy-now">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/watch/watch-3.png" class="card-img-top watch-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Apple Watch</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <h2 class="text-danger m-2">$400</h2>
+                        <div class="m-3">
+                            <button class="btn btn-buy-now">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/watch/watch-4.png" class="card-img-top watch-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">OnePlus Watch</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <h2 class="text-danger m-2">$360</h2>
+                        <div class="m-3">
+                            <button class="btn btn-buy-now">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- watch section ends  -->
 
         <!-- subscribe section starts -->
         <section id="subscribe" style="height: 300px;"
